add buckez management
