# src/main/java/de/frittenburger/controller/PageController.java
@@ -3,7 +3,9 @@ package de.frittenburger.controller;
 
 
 import java.security.GeneralSecurityException;
+import java.util.HashMap;
 import java.util.List;
+import java.io.File;
 import java.io.IOException;
 import java.util.Map;
 
@@ -15,12 +17,16 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestMethod;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
+
 import de.frittenburger.impl.RepositoryServiceImpl;
 import de.frittenburger.impl.UploadRepositoryImpl;
 import de.frittenburger.impl.UserRepositoryImpl;
 import de.frittenburger.interfaces.RepositoryService;
 import de.frittenburger.interfaces.UploadRepository;
+import de.frittenburger.model.BucketInfo;
 import de.frittenburger.model.BucketMetadata;
+import de.frittenburger.model.UploadBucket;
 
 @Controller
 public class PageController {
@@ -58,21 +64,76 @@ public class PageController {
 
 	
 	
+	@RequestMapping("/list")
+	public String list(Map<String, Object> model) {
+
+		defaultValues(model);
+
+		if (logger.isInfoEnabled()) {
+			logger.info("call List {}");
+		}
+
+		return "list";
+	}
 
 
+	 @RequestMapping(value = "/edit/{bucketId}",
+		        method = RequestMethod.GET)
+	 public String edit(Map<String, Object> model, @PathVariable("bucketId") String bucketId) {
+
+		defaultValues(model);
+		
+
+		model.put("bucket",bucketId );
+
+		try {
+			UploadBucket uploadBucket = repository.readBucket(bucketId);
+			
+			File files[] = repository.readFiles(uploadBucket);
+			String[] names = new String[files.length];
+			for (int i = 0; i < files.length; i++) {
+			   names[i] = files[i].getName();
+			}
+			model.put("files",names);
+
+			BucketInfo info = repositoryService.getBucketInfo(bucketId);
+			model.put("info",info);
+			
+			
+		} catch (IOException e) {
+			logger.error(e);
+		}
+		
+		if (logger.isInfoEnabled()) {
+			logger.info("call Create {}" , model.get("bucket"));
+		}
+
+		return "update";
+	}
 
 	@RequestMapping("/create")
 	public String create(Map<String, Object> model) {
 
 		defaultValues(model);
+		String bucketId = repository.generateRandomID();
+		try {
+			UploadBucket uploadBucket = repository.createBucket(bucketId);
+			
+			BucketInfo bucketInfo = new BucketInfo();
+			String info = new ObjectMapper().writerWithDefaultPrettyPrinter().writeValueAsString(bucketInfo);
+			repository.createFile(uploadBucket, "info.json", info.getBytes());
+			
+		} catch (IOException e) {
+			logger.error(e);
+		}
 
-		model.put("bucket", repository.generateRandomID());
+		model.put("bucket",bucketId );
 
 		if (logger.isInfoEnabled()) {
 			logger.info("call Create {}" , model.get("bucket"));
 		}
 
-		return "create";
+		return "redirect:/edit/"+bucketId;
 	}
 
 	 @RequestMapping(value = "/play/{bucketId}",
