# src/main/java/de/frittenburger/model/UploadBucket.java
@@ -6,12 +6,10 @@ public class UploadBucket {
 
 	private final File path;
 	private final UploadBagitInfo metadata;
-	private final UploadManifest manifest;
 
 	public UploadBucket(File path) {
 		this.path = path;
 		this.metadata = new UploadBagitInfo(new File(path,"bag-info.txt")); 
-		this.manifest = new UploadManifest(new File(path,"manifest-md5.txt"),"data/","MD5");
 	}
 
 	public File getPath() {
@@ -26,7 +24,4 @@ public class UploadBucket {
 		return metadata;
 	}
 
-	public UploadManifest getManifest() {
-		return manifest;
-	}
 }
